--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,12 @@
             <version>2.8.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.jodah</groupId>
+            <artifactId>expiringmap</artifactId>
+            <version>0.5.7</version>
+        </dependency>
+
     </dependencies>
 
 </project>
