--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <scm>
+        <developerConnection>scm:git:https://github.com/Donald522/JavaChatServer.git</developerConnection>
+    </scm>
+
     <groupId>org.anton</groupId>
     <artifactId>JavaChatServer</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -29,6 +33,11 @@
                         <version>1.0.0-M3</version>
                     </dependency>
                 </dependencies>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
             </plugin>
         </plugins>
     </build>
