--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
 
     <scm>
         <developerConnection>scm:git:git@github.com:Donald522/JavaChatServer.git</developerConnection>
-      <tag>JavaChatServer-1.0</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <groupId>org.anton</groupId>
     <artifactId>JavaChatServer</artifactId>
-    <version>1.0</version>
+    <version>1.1-SNAPSHOT</version>
 
     <build>
         <plugins>
