Change database name

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,6 +1,6 @@
 #Java_Chat database connection properties
 
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/Java_Chat
+db.url=jdbc:mysql://localhost/MSGR_APP
 db.username=chat_app
 db.password=password
